--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 0;
+    z-index: -1;
 }
 
 .container {
@@ -36,6 +36,7 @@ body {
     padding: 2rem;
     position: relative;
     z-index: 1;
+    background: transparent;
 }
 
 .logo {
